--- a/Asteroids/Asteroids.csproj
+++ b/Asteroids/Asteroids.csproj
@@ -81,6 +81,7 @@
     <Compile Include="SDL2-CS\SDL2_ttf.cs" />
     <Compile Include="StringTexture.cs" />
     <Compile Include="Texture.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="World.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
